<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/go_thread"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/thread"
        />

    <Button
        android:id="@+id/go_handler_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_thread"
        android:text="@string/message_handler"
        />

    <Button
        android:id="@+id/go_rx_java_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_handler_btn"
        android:text="rxJava"
        />

    <Button
        android:id="@+id/go_live_data_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_rx_java_btn"
        android:text="@string/live_data"
        />

</androidx.constraintlayout.widget.ConstraintLayout>